<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/guate"
        android:layout_width="0dp"
        android:layout_height="226dp"
        android:contentDescription="@string/guate"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/star_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/guate" />

    <ImageButton
        android:id="@+id/star_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/star"
        android:tint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/name"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_edit_text"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light_italic"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="@string/vacio"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/star_button" />

    <TextView
        android:id="@+id/name_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/atitlan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_black"
        android:text="@string/atitlan"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tikal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tikal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tikal"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/atitlan"
        app:layout_constraintEnd_toStartOf="@+id/semuc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/atitlan"
        app:layout_constraintTop_toTopOf="@+id/atitlan" />

    <Button
        android:id="@+id/semuc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_black"
        android:text="@string/semuc"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/tikal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tikal"
        app:layout_constraintTop_toTopOf="@+id/tikal" />

</androidx.constraintlayout.widget.ConstraintLayout>
